[tool.poetry]
name = "lab-09-modelling-and-rendering-data"
version = "0.1.0"
description = ""
authors = ["Jiali Yao <89944340+Jellyyyyy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
